style three activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     
     <string name="action_settings">Settings</string>
 
+    <string name="z">↔</string>
+
 
     <string-array name="array_languages">
         <item>Выберите язык</item>
